--- a/CakeTickBoard/Views/Home/Index.cshtml
+++ b/CakeTickBoard/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 <table style="width:100%" border="1">
   <tr>
     <th>Username</th>
-    <th>Points</th>
+    <th>Tick Count</th>
     <th>Rank</th>
     <th>Modify</th>
   </tr>
@@ -20,11 +20,13 @@
             <td>@user.UserName</td>
             <td>@user.CakeTickCount</td>
             <td>@user.Rank</td>
-            @if(user.UserName == (string)(ViewData["FullName"]))
-            {
-              <td>@Html.ActionLink("Add Tick", "AddTick", "Home") - 
-                  @Html.ActionLink("Remove Tick", "RemoveTick", "Home")</td>
-            }
+            <td>
+              @if (user.UserName == (string)(ViewData["FullName"]))
+              {
+                  @Html.ActionLink("Add Tick", "AddTick", "Home") @:-
+                  @Html.ActionLink("Remove Tick", "RemoveTick", "Home")
+              }
+            </td>
         </tr>
     }
 </table>
